tests/reject/errorIsError.emojic
🏁 🍇
  🍦 a 🔤Abc, 123🔤

  🍊 🚥 a 🍇
    😀 🔤error🔤
  🍉
  🍓 🍇
    😀 🔤no error🔤
  🍉
🍉
